# ForgeWorks

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/fixtures/golden/: go-devcontainer.json  python-ai-full.json  python-hostile.json  rust-minimal.json  typescript-codex-only.json  typescript-minimal.json  typescript-spa-ai.json
.github/fixtures/golden/expected/go-devcontainer/: .gitignore  .golangci.yml  AGENTS.md  README.md  go.mod  greet.go  greet_test.go
.github/fixtures/golden/expected/python-ai-full/: .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/fixtures/golden/expected/python-ai-full/.claude/agents/: code-reviewer.md
.github/fixtures/golden/expected/python-ai-full/.claude/hooks/: slice-audit.sh
.github/fixtures/golden/expected/python-ai-full/.devcontainer/: devcontainer.json
.github/fixtures/golden/expected/python-ai-full/.github/: pull_request_template.md
.github/fixtures/golden/expected/python-ai-full/.github/workflows/: qa.yml
.github/fixtures/golden/expected/python-ai-full/docs/: PRODUCT_VISION.md  SECURITY.md  agents.json  memory.md  requirements.md  structure.txt
.github/fixtures/golden/expected/python-ai-full/scripts/: fix.py
.github/fixtures/golden/expected/python-ai-full/src/: example.py
.github/fixtures/golden/expected/python-hostile/: AGENTS.md  README.md  pyproject.toml
.github/fixtures/golden/expected/rust-minimal/: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/fixtures/golden/expected/rust-minimal/.claude/agents/: code-reviewer.md  tech-debt.md
.github/fixtures/golden/expected/rust-minimal/.claude/hooks/: quality-gate.sh
.github/fixtures/golden/expected/rust-minimal/.github/workflows/: qa.yml
.github/fixtures/golden/expected/rust-minimal/docs/: PRODUCT_VISION.md  SECURITY.md  agents.json  documentation.md  language-standards.md  requirements.md  structure.txt
.github/fixtures/golden/expected/rust-minimal/docs/explanations/: README.md
.github/fixtures/golden/expected/rust-minimal/scripts/: e2e.sh  fix.sh  qa.sh
.github/fixtures/golden/expected/rust-minimal/src/: lib.rs
.github/fixtures/golden/expected/rust-minimal/tests/: e2e.rs
.github/fixtures/golden/expected/typescript-codex-only/: AGENTS.md  package.json  tsconfig.json
.github/fixtures/golden/expected/typescript-minimal/: .gitignore  AGENTS.md  README.md
.github/fixtures/golden/expected/typescript-spa-ai/: .gitignore  AGENTS.md  README.md  package.json  playwright.config.ts
.github/scripts/: deps_guard_test.sh  golden_test.py  line_cap_test.sh  pin_check.sh  render_smoke.py  slice_audit_test.sh
.github/workflows/: ci.yml
bootstrap/: AGENTS.md  install.sh
docs/: ROADMAP.md  how-to-use.md  portfolio-readiness-reaudit-2026-06-30.md  template-review-and-roadmap.md
docs/plans/: 2026-07-11-loop-engineering-review.md  2026-07-11-v2.1.0-auditable-delivery.md
docs/superpowers/plans/: 2026-07-09-forgeworks-v2.md  2026-07-16-v2.5.0-cross-agent-optimization.md
docs/superpowers/specs/: 2026-07-09-forgeworks-v2-design.md  2026-07-16-v2.5.0-cross-agent-optimization-design.md
init-project/: SKILL.md  render.py  render_schema.py
init-project/templates/conditional/: ai-discipline.md  codex-review-step.md  codex-roster-note.md  gotchas-seed.md  memory-block.md  memory-doc-line.md
init-project/templates/conditional/agents/: antigravity.md  claude-code.md  codex.md  cursor.md  no-claude-note.md  other.md
init-project/templates/core/: .env.example  .mcp.json  AGENTS.md  README.md
init-project/templates/core/.claude/: settings.json
init-project/templates/core/.claude/agents/: code-reviewer.md  implementer.md  security-reviewer.md  tech-debt.md  utility.md  (+1 more)
init-project/templates/core/docs/: PRODUCT_VISION.md  SECURITY.md  agents.md  backlog.md  documentation.md  gotchas.md  language-standards.md  memory.md  requirements.md  structure.txt
init-project/templates/profiles/go/: .gitignore  .golangci.yml  go.mod  profile.json
init-project/templates/profiles/python/: .gitignore  .pre-commit-config.yaml  profile.json  pyproject.toml.example
init-project/templates/profiles/rust/: .gitignore  Cargo.toml  profile.json  rust-toolchain.toml
init-project/templates/profiles/rust/.devcontainer/: Dockerfile  devcontainer.json
init-project/templates/profiles/rust/scripts/: linecap.sh  qa.sh
init-project/templates/profiles/typescript/: .prettierignore  eslint.config.js  package.json  profile.json  vitest.config.ts
upgrade-project/: SKILL.md
(+72 files in other folders)
