[project]
name = "recipe-radar"
version = "0.1.0"
description = "Turn a photo of a fridge into three cookable dinner suggestions for busy home cooks."
requires-python = ">=3.12"
dependencies = [
    # Minimal core. /init-project appends capability dependencies (web framework,
    # database, vector store, LLM SDK, ...) based on your interview answers, so a
    # generated project ships only what it actually uses.
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    # End-to-end / headless browser. Run via scripts/e2e.sh (CI, not the fast gate).
    "pytest-playwright>=0.5",
    "mypy>=1.13",
    "ruff>=0.15",
    "pre-commit>=4.0",
    "factory-boy>=3.3",
]

[project.scripts]
# Bundled scripts. Run with: uv run <name>
qa = "scripts.qa:main"    # verify only (lint, format check, types, tests) -- safe in CI
fix = "scripts.fix:main"  # local auto-repair (ruff --fix + format write)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

# ───── Tool configuration ─────

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# The installed /init-project skill keeps its template tree under .claude/skills;
# those files are not project code -- never lint them.
extend-exclude = [".claude"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle, pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "ANN",               # flake8-annotations
    "RET",               # flake8-return
    "SIM",               # flake8-simplify
    "TC",                # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]      # annotations not required in tests

[tool.ruff.lint.flake8-bugbear]
# Calls that are immutable-by-convention as parameter defaults. Extend for your
# framework (FastAPI users add: fastapi.Depends, fastapi.Query, fastapi.Body,
# fastapi.File) so B008 does not fire on idiomatic DI.
extend-immutable-calls = []

# The gate runs `mypy src/` (tests are covered by ruff + pytest, not mypy) --
# no per-module overrides needed; add them here if you extend mypy to tests/.
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow",
    "eval: marks tests as LLM evaluation tests (may be expensive)",
    "e2e: end-to-end tests; run separately via scripts/e2e.sh in CI, excluded from the fast gate",
    "security: red-team / security tests (see docs/SECURITY.md)",
]
